--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ minecraft {
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
         client {
-            args '--username', 'Reap'
+            args '--username', 'ninethousand'
 
             workingDirectory project.file('run')
 
