--- a/build.gradle
+++ b/build.gradle
@@ -66,27 +66,31 @@ dependencies {
 
     compile 'com.github.olliem5:pace:1.3'
     compile 'com.github.CafeDevelopment:Venture:2.0-SNAPSHOT'
+    compile group: 'club.minnced', name: 'java-discord-rpc', version: 'v2.0.2'
+
 }
 
-/*jar.manifest.attributes(
-        'MixinConfigs': 'mixins.sandstorm.json',
+jar.manifest.attributes(
+        'MixinConfigs': 'mixins.ninehack.json',
         'tweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
         'TweakOrder': 0,
         'FMLCorePluginContainsFMLMod': 'true',
-        'FMLCorePlugin': 'git.yagel15637.sandstorm.mixin.MixinLoader',
+        'FMLCorePlugin': 'me.ninethousand.ninehack.mixin.MixinLoader',
         'ForceLoadAsMod': 'true'
-)*/
+)
 
-//mixin {
-//    defaultObfuscationEnv 'searge'
-//    add sourceSets.main, 'refmap.sandstorm.json'
-//}
+mixin {
+    defaultObfuscationEnv 'searge'
+    add sourceSets.main, 'refmap.ninehack.json'
+}
 
 shadowJar {
     dependencies {
         include(dependency('org.spongepowered:mixin'))
         include(dependency('com.github.olliem5:pace:1.3'))
         include(dependency('com.github.CafeDevelopment:Venture'))
+        include(dependency('club.minnced:java-discord-rpc:v2.0.2'))
+
     }
 
     exclude 'dummyThing'
